# arbitrage-bot-dashboard-be

./: .gitignore  API_REFERENCE.md  Cargo.toml  DEBUG_API_REFERENCE.md  OPPORTUNITIES_API_SPEC.md  OPPORTUNITY_DETAILS_API_SPEC.md  README.md  WS_REFERENCE.md  config.toml
abis/: IUniversalRouterExactInput.json
config/: config.toml
docs/: CONFIGURATION.md
scripts/: generate_config.rs  setup_mongodb.sh
src/: config.rs  contract.rs  database.rs  errors.rs  handlers.rs  indexer.rs  lib.rs  main.rs  models.rs  notification_handler.rs  pool_indexer.rs  routes.rs  utils.rs
