[package]
name = "arbitrage-bot-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
derive_more = "0.99"
futures = "0.3"
rand = "0.8"
alloy-primitives = "0.1"
alloy = { version = "1.0.27", features = ["full"] }
bson = "2.8"
regex = "1.10"
